# the-life-engine-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: release.yaml
ev_core/: Cargo.toml
ev_core/src/: lib.rs  node.rs  render_layers.rs
examples/: sandbox.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
neat_brain/: Cargo.toml
neat_brain/src/: lib.rs
neat_brain/src/topology/: mod.rs  mutation.rs
nora/: Cargo.toml
nora/src/: junction.rs  lib.rs
nora/src/brain/: mod.rs  neuron.rs  scheduler.rs  state.rs
nora_neat/: Cargo.toml
nora_neat/examples/: sandbox.rs
nora_neat/src/: activation.rs  lib.rs  mutation.rs  scratch.rs  test_utils.rs  tests.rs
nora_neat/src/active/: mod.rs
nora_neat/src/burn_net/: coeff.rs  mod.rs
nora_neat/src/burn_net/expander/: mod.rs  tests.rs
nora_neat/src/naive_net/: input.rs  mod.rs  network.rs  neuron.rs  neuron_type.rs
nora_neat/src/network/: mod.rs
nora_neat/src/neuron/: input.rs  mod.rs  neuron_type.rs
nora_neat/src/old/burn_net/: basis_prime.rs  network.rs  tests.rs
nora_neat/src/old/simple_net/: network.rs  neuron_type.rs
nora_neat/src/simple_net/: input.rs  mod.rs  network.rs  neuron.rs  neuron_type.rs
old_src/: consts.rs  main.rs  startup.rs
old_src/cell/: mod.rs
old_src/engine/: mod.rs
old_src/environment/: mod.rs
old_src/event/: mod.rs
old_src/organism/: anatomy.rs  direction.rs  mod.rs
old_src/organism/perception/: mod.rs
old_src/render/: mod.rs
old_src/world/: mod.rs  threading.rs
organism/: Cargo.toml
organism/src/: lib.rs
organism/src/cell/: collagen.rs  details.rs  genome.rs  inputs.rs  kind.rs  mod.rs  outputs.rs  template.rs
organism/src/cell/brain/: ui.rs
organism/src/cell/cell_types/: data.rs  eye.rs  foot.rs  launcher.rs  mod.rs
organism/src/cell/cell_types/brain/: ui.rs
organism/src/cpu_net/: mod.rs  neuron.rs
organism/src/ff_network/: cells.rs  mod.rs  mutation.rs  replicator.rs  topology.rs
organism/src/ff_network/genome/: cell_map.rs  decycler.rs  direction.rs  mod.rs  mutator.rs  replicator.rs
organism/src/ff_network/neuron/: mod.rs  neuron_type.rs  topology.rs
organism/src/ff_network/tests/: decycler_tests.rs  genome_tests.rs  mod.rs  mutation_tests.rs  neuron_tests.rs  replication_tests.rs
organism/src/genome/: activations.rs  builder.rs  cell_map.rs  cells.rs  decycler.rs  mod.rs  mutation.rs  mutator.rs  plugin.rs  replicator.rs  template.rs
organism/src/genome/neuron/: mod.rs  topology.rs
organism/src/network/: mod.rs  topology.rs
organism/src/old_genome/: builder.rs  mod.rs  plugin.rs
organism/src/organism/: mod.rs  spawn.rs  ui.rs
src/: NOTES.md  audio.rs  camera.rs  components.rs  consts.rs  direction.rs  food.rs  fps.rs  game.rs  lib.rs  load.rs  main.rs  map.rs  neighbor.rs  neighbors.rs  occupied_locations.rs  peripherals.rs  remove_this.rs  screens.rs  settings.rs  splash.rs  startup.rs  third_party.rs  wall.rs  world.rs  world_settings.rs
src/camera/: mod.rs  node.rs  render_layers.rs  ui.rs  world.rs
src/cell/: armor.rs  food.rs  genome.rs  killer.rs  kind.rs  mod.rs  mouth.rs  mover.rs  outputs.rs  producer.rs  template.rs  types.rs  wall.rs
src/cell/cell_types/: data.rs  eye.rs  foot.rs  launcher.rs
src/cell/cell_types/brain/: mod.rs
src/cpu_net/: mod.rs  neuron.rs
src/demo/: animation.rs  level.rs  mod.rs  movement.rs  player.rs
src/dev/: debug.rs  inspector.rs  mod.rs  picking_debug.rs  skip.rs
src/dev_tools/: autoselect_port.rs  debug.rs  inspector.rs  mod.rs  skip.rs
src/engine/: mod.rs
src/environment/: direction.rs  location.rs  mod.rs  mouse_hover.rs
src/event/: mod.rs
src/game/: mod.rs
src/game/cell/: brain.rs  data.rs  eye.rs  launcher.rs  mod.rs  neurons.rs
src/game/cell/brain/: mod.rs  ui.rs
src/game/organism/: genome.rs  mod.rs
src/game/organism/genome/: mod.rs  plugin.rs
src/game/ui/: mod.rs
src/gameplay/: animation.rs  level.rs  mod.rs  player.rs  tick.rs
src/gameplay/cell/: armor.rs  eye.rs  food.rs  killer.rs  mod.rs  mouth.rs  mover.rs  producer.rs
src/gameplay/environment/: actions.rs  coords.rs  grid.rs  mod.rs  query.rs
src/gameplay/genome/: mod.rs
src/gameplay/organism/: mod.rs  spawn.rs
src/gameplay/world/: mod.rs
src/genome/: activations.rs  cell_map.rs  cells.rs  decycler.rs  mod.rs  mutation.rs  mutator.rs  replicator.rs  template.rs
src/genome/neuron/: neuron_type.rs  topology.rs
src/life_engine/: mod.rs
src/life_engine/cell/: mod.rs
src/life_engine/messages/: mod.rs
src/life_engine/organism/: mod.rs
src/life_engine/world/: mod.rs
src/menu/: actions.rs  button.rs  mod.rs  systems.rs
src/menus/: credits.rs  main.rs  mod.rs  settings.rs
src/network/: cells.rs  mod.rs  template.rs
src/node_visual/: edge.rs  mod.rs  node.rs  plugin.rs
src/old/: camera.rs  main.rs  mod.rs  neighbor.rs
src/old/cell/: eye.rs  food.rs  mouth.rs  types.rs  wall.rs
src/old/environment/: direction.rs  mod.rs  mouse_hover.rs
src/old/menu/: actions.rs  button.rs  systems.rs
src/old/organism/: genome.rs
src/organism/: anatomy.rs  count.rs  direction.rs  genome.rs  mod.rs  organ.rs  plugin.rs  reproduction.rs  request.rs  spawn.rs  ui.rs
src/organism/cell/: mod.rs
src/organism/cell/brain/: mod.rs  ui.rs  visual.rs
src/organism/genome/: mod.rs  plugin.rs
src/organism/perception/: mod.rs
src/render/: mod.rs  startup.rs
src/screens/: gameplay.rs  loading.rs  mod.rs
src/theme/: interaction.rs  mod.rs  widget.rs
src/utils/: asset_tracking.rs  conditions.rs  interaction_palette.rs  mod.rs
src/widgets/: action_btn.rs  game_mode_btn.rs  legacy.rs  mod.rs  nav.rs  text.rs
src/world/: map.rs  mod.rs  neighbors.rs  new_map.rs  old_world copy.rs  request.rs  square.rs
