[package]
name = "spirit"
version = "0.1.0"
publish = false
authors = ["Daniel Gallups <dsgallups@protonmail.com>"]
edition = "2024"

[features]
dev = [
    "dep:bevy-inspector-egui",
    "dep:bevy_egui",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
    # "bevy/glam_assert",
    "bevy/sysinfo_plugin",
    # Disable when hotpatching
]

[dependencies]
bevy = { version = "0.17", features = ["experimental_bevy_feathers"] }
bevy_ui_text_input = { git = "https://github.com/dsgallups/bevy_ui_text_input.git", branch = "dsgallups/disable-default" }
cosmic-text = "0.14"

uuid = { version = "1.10", features = ["rng", "serde", "v4"] }
rand = "0.9.2"


# dev
bevy-inspector-egui = {version = "0.35", optional = true }
bevy_egui = { version = "0.38", features = ["bevy_ui"], optional = true }

#nora
# nora_neat.workspace = true
bimap = "0.6.3"
enum_dispatch = "0.3.13"
strum = {version = "0.27.2", features = ["derive"] }
bitflags = "2.10.0"
avian2d = "0.4.1"


[profile.dev]
opt-level = 1
panic = "abort"  # drop unwinder

[profile.dev.package."*"]
opt-level = 3


[profile.release]
opt-level = 3            # maximum optimisation
codegen-units = 1        # maximise cross-function inlining
lto = "fat"              # full-program link‑time optimisation
panic = "abort"          # drop unwinder
incremental = false
debug = false
debug-assertions = false
overflow-checks = false
strip = "none"           # symbols don't hurt runtime speed


[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }
unused_parens = "allow"

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
double-parens = "allow"



# [workspace.dependencies]
# ev_core = {path="ev_core"}
# nora_neat = {path = "nora_neat"}
# bevy = { version = "0.17", features = ["experimental_bevy_feathers"] }
# uuid = { version = "1.10", features = ["rng", "serde", "v4"] }
# rand = "0.9.2"
# rayon = "1.11.0"
# burn = { version = "0.17.1", features = ["ndarray", "cuda", "wgpu"] }
# fnv = "1.0"
# tracing = "0.1.41"
# tracing-subscriber = "0.3.20"
# pretty_assertions = "1.4.1"
# strum = {version = "0.27.2", features = ["derive"] }
# bus = "2.4"
# trotcast = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4"
